style fix(scrollbar y): fix heigth contImg

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ main {
 
 .containerImg {
     width: calc(100% / 7);
-    height: calc(100% / 5); 
     position: relative;
     border: .125rem solid black;
 }
